# samwise

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
samwise/: __init__.py  cloud.py  parse.py  run.py  storage.py
samwise/cli/: flap.py  fly.py  run.py
scripts/: flap.py  fly.py  run.py
test/: conftest.py  test_cli.py  test_run.py  test_scripts.py  test_storage.py
