[metadata]
name = samwise
version = 0.0.0
description = Tools for running interruptible jobs in packaged containers
long_description = file: README.rst
keywords = Connectomics
maintainer = Nicholas Turner
maintainer_email = nturner@zetta.ai
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.7

[options.extras_require]
develop =
    black ==21.9.b0
    click ==8.0.1
    flake8 ==4.0.1
    mypy == 0.961
    pre-commit ==2.19.0
    pytest ==7.1.2

[options.entry_points]
console_scripts=
    samwise-run = samwise.cli.run:main
    samwise-fly = samwise.cli.fly:main
    samwise-flap = samwise.cli.flap:main
